add camera open in Web

--- a/src/PoCheck_Web/pocheck/templates/pocheck/index.html
+++ b/src/PoCheck_Web/pocheck/templates/pocheck/index.html
@@ -95,7 +95,7 @@
         <div class="col-md-8 mx-auto">
           <h2 class="section-heading">시연 바로가기</h2>
           <p>아이콘을 누르면 실행됩니다.</p>
-          <a class="badge-link" href="{% url 'pocheck:play' %}"><img src='{% static "pocheck/img/facial-recognition.png" %}' width = "150" alt=""></a>
+          <a class="badge-link" href="{% url 'pocheck:livefe' %}"><img src='{% static "pocheck/img/facial-recognition.png" %}' width = "150" alt=""></a>
         </div>
       </div>
     </div>
